[new] 新增在线编辑，增加总结文档Plan.md
